--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+    <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <h1>Boostrap 5 Responsiv Grid</h1>
+            <p>Layout a griglia con diversi breackpoint (sm,md,lg).</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-12">
+           <h2>Colonna 1</h2>
+          </div>
+          <div class="col-12">
+            <h2>Colonna 2</h2>
+          </div>
+        </div>
+      </div>
+
+    </main>
      <!-- #region BOOTSTRAP SCRIPT PACK JAVASCRIPT PRIMA DELLA CHIUSURA DEL BODY-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
      <!-- #endregion BOOTSTRAP SCRIPT PACK JAVASCRIPT PRIMA DELLA CHIUSURA DEL BODY -->
