--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
       <div class="container text-center">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 col-sm-6 col-lg-4">
            <h2>Colonna 1</h2>
           </div>
-          <div class="col-12">
+          <div class="col-12 col-sm-6 col-lg-8">
             <h2>Colonna 2</h2>
           </div>
         </div>
