--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
         </div>
       </div>
 
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-6 col-sm-4">
+            <h2>Column 1</h2>
+          </div>
+          <div class="col-6 col-sm-4">
+            <h2>Column 2</h2>
+          </div>
+          <div class="col-12 col-sm-4">
+            <h2>Column 3</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="container text-center">
+        <div class="row">
+            <div class="col-6 col-sm-3"><h2>Column 1</h2></div>
+            <div class="col-6 col-sm-3"><h2>Column 2</h2></div>
+            <div class="col-6 col-sm-3"><h2>Column 3</h2></div>
+            <div class="col-6 col-sm-3"><h2>Column 4</h2></div>
+        </div>
+      </div>
     </main>
      <!-- #region BOOTSTRAP SCRIPT PACK JAVASCRIPT PRIMA DELLA CHIUSURA DEL BODY-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
