--- a/index.html
+++ b/index.html
@@ -11,47 +11,56 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-    <div class="container text-center">
+    <main class="m-4">
+    <div class="container text-start">
         <div class="row">
-          <div class="col">
+          <div class="col p-4">
             <h1>Boostrap 5 Responsiv Grid</h1>
-            <p>Layout a griglia con diversi breackpoint (sm,md,lg).</p>
+            <p>Layout a griglia con diversi breackpoint (sm, md, lg).</p>
           </div>
         </div>
       </div>
 
-      <div class="container text-center">
+      <div class="container text-start">
         <div class="row">
-          <div class="col-12 col-sm-6 col-lg-4">
+          <div class="col-12 col-sm-6 col-lg-4 bg-light p-4">
            <h2>Colonna 1</h2>
+           <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
           </div>
-          <div class="col-12 col-sm-6 col-lg-8">
+          <div class="col-12 col-sm-6 col-lg-8 bg-secondary p-4 text-white">
             <h2>Colonna 2</h2>
+            <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e due terzi su dispositivi grandi .</p>
           </div>
         </div>
       </div>
 
-      <div class="container text-center">
+      <div class="container text-start">
         <div class="row">
-          <div class="col-6 col-sm-4">
-            <h2>Column 1</h2>
+          <div class="col-6 col-sm-4 bg-primary p-4 text-white">
+            <h2>Colonna 1</h2>
+            <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
           </div>
-          <div class="col-6 col-sm-4">
-            <h2>Column 2</h2>
+          <div class="col-6 col-sm-4 bg-success p-4 text-white">
+            <h2>Colonna 2</h2>
+            <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
           </div>
-          <div class="col-12 col-sm-4">
-            <h2>Column 3</h2>
+          <div class="col-12 col-sm-4 bg-danger p-4 text-white">
+            <h2>Colonna 3</h2>
+            <p>Larghezza intera su dispositivi piccoli (col-12) e un terzo su dispositivi medi e più grandi.</p>
           </div>
         </div>
       </div>
 
-      <div class="container text-center">
+      <div class="container text-start">
         <div class="row">
-            <div class="col-6 col-sm-3"><h2>Column 1</h2></div>
-            <div class="col-6 col-sm-3"><h2>Column 2</h2></div>
-            <div class="col-6 col-sm-3"><h2>Column 3</h2></div>
-            <div class="col-6 col-sm-3"><h2>Column 4</h2></div>
+            <div class="col-6 col-sm-3 bg-info p-4 text-white"><h2>Colonna 1</h2><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                medi e più grandi.</p></div>
+            <div class="col-6 col-sm-3 bg-warning p-4 text-white"><h2>Colonna 2</h2><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                medi e più grandi.</p></div>
+            <div class="col-6 col-sm-3 bg-dark p-4 text-white"><h2>Colonna 3</h2><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                medi e più grandi.</p></div>
+            <div class="col-6 col-sm-3 bg-light p-4"><h2>Colonna 4</h2><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+                medi e più grandi.</p></div>
         </div>
       </div>
     </main>
