--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main class="m-4">
-    <div class="container text-start">
+    <div class="container text-center">
         <div class="row">
           <div class="col p-4">
             <h1>Boostrap 5 Responsiv Grid</h1>
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <div class="container text-start">
+      <div class="container text-start mb-4">
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-4 bg-light p-4">
            <h2>Colonna 1</h2>
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <div class="container text-start">
+      <div class="container text-start mb-4">
         <div class="row">
           <div class="col-6 col-sm-4 bg-primary p-4 text-white">
             <h2>Colonna 1</h2>
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="container text-start">
+      <div class="container text-start mb-4">
         <div class="row">
             <div class="col-6 col-sm-3 bg-info p-4 text-white"><h2>Colonna 1</h2><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi
                 medi e più grandi.</p></div>
